--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Salom git</h1>    
+  <h1>Menda oxshadi</h1>  
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut dicta, quibusdam, tempore porro, ipsa pariatur laudantium vel iusto ea corporis dignissimos! Aut corporis numquam fuga quo ratione minima, consequatur dicta?
+    
+  </p>  
 </body>
 </html>
