contact section tugadi

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <h1>Salom git</h1>    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>Salom git</h1>
+
+    <section class="contact">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse
+      expedita ad molestiae neque nam. Magni, culpa porro laborum rerum at fugit
+      facilis modi possimus alias et deserunt vitae aspernatur eligendi! Placeat
+      hic quo quis sint nihil labore recusandae repudiandae ea consectetur
+      quaerat doloribus inventore modi neque, numquam quae! Excepturi mollitia
+      doloremque minima id, eligendi, ea ipsam sunt, vitae molestiae tenetur
+      placeat totam aliquid veritatis repudiandae consectetur consequatur et
+      iusto sequi? Expedita, illum quisquam? Doloribus ipsam porro sint ipsum,
+      repudiandae aliquid sunt culpa atque laudantium perferendis omnis quod
+      deserunt magni fugiat nisi ipsa fugit debitis provident? Aut eaque
+      perspiciatis, nisi voluptatibus, unde harum expedita iusto explicabo
+      accusamus aliquam vel dolore asperiores nostrum? Amet, molestiae et? Sint
+      perferendis laborum consectetur aliquam nihil eius eum!
+    </section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+  </body>
 </html>
